@@ -23,14 +23,14 @@ public class CSVFeatureLogger extends FeatureLogger {
   private final char keyValueSep;
   private final char featureSep;
 
-  public CSVFeatureLogger(String fvCacheName, FeatureFormat f, boolean extractAll) {
-    super(fvCacheName, f, extractAll);
+  public CSVFeatureLogger(String fvCacheName, FeatureFormat f, boolean logAll) {
+    super(fvCacheName, f, logAll);
     this.keyValueSep = DEFAULT_KEY_VALUE_SEPARATOR;
     this.featureSep = DEFAULT_FEATURE_SEPARATOR;
   }
 
-  public CSVFeatureLogger(String fvCacheName, FeatureFormat f, Boolean extractAll, char keyValueSep, char featureSep) {
-    super(fvCacheName, f, extractAll);
+  public CSVFeatureLogger(String fvCacheName, FeatureFormat f, Boolean logAll, char keyValueSep, char featureSep) {
+    super(fvCacheName, f, logAll);
     this.keyValueSep = keyValueSep;
     this.featureSep = featureSep;
   }
