@@ -33,13 +33,13 @@ public abstract class FeatureLogger {
 
   protected final FeatureFormat featureFormat;
 
-  protected final Boolean extractAll;
+  protected final Boolean logAll;
 
 
-  protected FeatureLogger(String fvCacheName, FeatureFormat f, Boolean extractAll) {
+  protected FeatureLogger(String fvCacheName, FeatureFormat f, Boolean logAll) {
     this.fvCacheName = fvCacheName;
     this.featureFormat = f;
-    this.extractAll = extractAll;
+    this.logAll = logAll;
   }
 
   /**
